добавит вертску страницы "о компании"

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13721,50 +13721,457 @@ a {
 // --------------------------------------- cooperation end ---------------------------------------
 // --------------------------------------- company start ---------------------------------------
 .company {
-  .company__container {
-    padding: 30px 0 120px;
-    display: grid;
-    grid-template-columns: 1fr 292px;
-    grid-auto-flow: row;
-    gap: 40px;
-
-    .company__title {
-    }
+  .about {
+    .about__container {
+      padding: 40px 0 100px;
+      display: grid;
+      grid-auto-flow: row;
+      gap: 40px;
+  
+      .about__top {
+        // margin-bottom: 90px;
+        display: grid;
+        grid-template-columns: 1fr 292px;
+        grid-auto-flow: row;
+        gap: 40px;
+        align-items: center;
+  
+  
+  
+        .about__title {
+        }
+        
+        .about__btn-wrapper {
+          display: grid;
+          grid-auto-flow: column;
+          justify-content: end;
+          gap: 18px;
     
-    .company__btn-wrapper {
+          .about__btn {
+            padding: 16px 34px;
+            border-radius: 50px;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 18px;
+            text-align: left;
+            background: transparent;          
+            transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+          }
+    
+          .about__btn_green {
+            background: #56693e;
+            color: #fff;
+            border: 1px solid #56693e;
+            text-wrap: nowrap;
+            pointer-events: none;
+          }
+    
+          .about__btn_white {
+            background: #fff;
+            color: #616161;
+            border: 1px solid #56693e;
+            text-wrap: nowrap;
+  
+            &:hover {
+              background: #9ABC6F;
+              border: 1px solid #9ABC6F;
+              color: #fff;
+            }
+    
+          }
+        }
+      }
+
+      .about__content {
+        display: grid;
+        grid-auto-flow: row;
+        grid-template: auto 820px / 1fr;
+        gap: 80px;
+
+        .about__content-top {
+          display: grid;
+          grid-auto-flow: column;
+          align-items: end;
+          gap: 30px;
+
+          .about__content-title {
+            font-family: Inter;
+            font-size: 80px;
+            font-weight: 400;
+            line-height: 96.82px;
+            text-align: left;
+            color: #56693E;
+          }
+
+          .about__content-text {
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 27px;
+            text-align: left;
+            color: #363636;
+          }
+        }
+
+        .slider_swiper {
+          overflow: hidden;
+          position: relative;
+  
+          .slider__list {
+            // display: grid;
+            // grid-auto-flow: row;
+            // gap: 22px;
+            // align-content: start;
+            height: 820px;
+            width: 100%;
+  
+            .slider__item {
+              & img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+              }
+            }
+          }
+  
+          .swiper-button {
+            width: 55px;
+            height: 55px;
+            top: 53%;
+            translate: 0 -50%;
+            z-index: 1;
+  
+            &::after {
+              display: none;
+            }
+          }
+  
+          .swiper-button-prev {
+          }
+  
+          .swiper-button-prev_slider {
+            left: 50px;
+          }
+  
+          .swiper-button-next_slider {
+            right: 50px;
+          }
+        }  
+      }
+
+    }
+  }
+
+  .standarts {
+
+    .standarts__container {
+      padding: 0 0 40px;
+
       display: grid;
       grid-auto-flow: column;
-      justify-content: end;
-      gap: 18px;
+      gap: 80px;
 
-      .company__btn {
-        padding: 16px 34px;
-        border-radius: 50px;
-        font-family: Inter;
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 18px;
-        text-align: left;
+      .standarts__content {
+        max-width: 778px;
+        display: grid;
+        grid-auto-flow: row;
+        gap: 40px;
+        align-content: start;
+
+        .standarts__head-text {
+          margin-bottom: 55px;
+          font-family: Inter;
+          font-size: 18px;
+          font-weight: 400;
+          line-height: 27px;
+          text-align: left;
+          color: #616161;
+          letter-spacing: -1px;
+        }
+
+        .standarts__title {
+          font-family: Inter;
+          font-size: 40px;
+          font-weight: 500;
+          line-height: 48.41px;
+          text-align: left;
+          color: #56693E;
+
+
+        }
+        .standarts__text {
+          //styleName: текст боди;
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 23.2px;
+          text-align: left;
+          color: #616161;
+        }
       }
-
-      .company__btn_green {
-        background: #56693e;
-        color: #fff;
-        border: 1px solid #56693e;
-        text-wrap: nowrap;
-
+      .standarts__img {
+  
+        & img {
+  
+        }
       }
-
-      .company__btn_white {
-        background: #fff;
-        color: #616161;
-        border: 1px solid #56693e;
-        text-wrap: nowrap;
-
-      }
-
-
     }
+  }
+
+  .history {
+
+    .history__container {
+      padding: 62px 0 100px;
+
+      .history__title {
+        margin-bottom: 30px;
+      }
+      .history__list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        gap: 2px;
+
+        .history__item {
+          display: grid;
+          grid-auto-flow: row;
+          gap: 20px;
+          align-content: end;
+          padding: 30px;
+          max-width: 570.67px;
+          min-height: 360px;
+          background: #F5F5F5;
+
+          .history__item-title {
+            font-family: Inter;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 30px;
+            text-align: left;
+            color: #363636;
+          }
+
+          .history__item-text {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 23.2px;
+            text-align: left;
+            color: #616161;
+          }
+        }
+      }
+    }
+  }
+  
+  .projects {
+    background: #F5F5F5;
+
+    .projects__container {        
+      padding: 80px 0 80px;
+      .projects__title {
+        margin-bottom: 50px;
+      }
+      .project-page__list {
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+        gap: 10px;
+        overflow: auto;
+        padding-right: 10px;
+    
+        &::-webkit-scrollbar {
+          width: 4px;
+        }
+    
+        &::-webkit-scrollbar-track {
+          width: 4px;
+          background-color: #dedede;
+          border-radius: 100px;
+        }
+    
+        &::-webkit-scrollbar-thumb {
+          width: 4px;
+          border-radius: 100px;
+          background: #b1b1b1;
+        }
+    
+        .project-page__item {
+        }
+    
+        
+        .project-page__item {          
+          .project-page__link {
+            display: grid;
+            grid-auto-flow: row;
+            grid-template-rows: 356px 1fr;
+            // max-width: 1000px;
+            // width: 100%;
+            min-height: 563px;
+            height: max-content;
+            border-radius: 10px;
+            overflow: hidden;
+          }
+          &.project-page__item_no-show {
+            display: none;
+          }
+    
+          .project-page__card-img {
+            position: relative;
+            height: 356px;
+            overflow: hidden;
+    
+            & img {
+              display: block;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+    
+            .project-page__card-info {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              padding: 30px;
+              display: grid;
+              grid-auto-flow: column;
+              align-items: center;
+              gap: 15px;
+              grid-template-columns: auto auto 1fr;
+    
+              // border-radius: 10px;
+              // height: 100%;
+              // background: rgba(0, 0, 0, 0.5);
+              // display: grid;
+              // grid-auto-flow: column;
+              // place-items: center;
+              // gap: 10px;
+    
+              .project-page__card-label {
+                font-family: Inter;
+                font-size: 30px;
+                font-weight: 500;
+                line-height: 36.31px;
+                text-align: left;
+                color: #fff;
+                text-transform: uppercase;
+    
+                &.project-page__card-label_small {
+                  font-family: Inter;
+                  font-size: 20px;
+                  font-weight: 700;
+                  line-height: 24.2px;
+                  text-align: left;
+                  color: #fff;
+                }
+              }
+              .project-page__card-info-btn {
+                /* Статус проекта */
+                /* Auto layout */
+                // display: flex;
+                // flex-direction: column;
+                // align-items: center;
+                display: grid;
+                place-items: center;
+                padding: 10px 15px;
+                margin-left: auto;
+                // gap: 7px;
+    
+                // margin: 0 auto;
+                // width: 78px;
+                // height: 39px;
+    
+                background: #ffffff;
+                backdrop-filter: blur(15px);
+                border-radius: 5px;
+    
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 19.36px;
+                text-align: center;
+                color: #56693e;
+                text-transform: uppercase;
+              }
+            }
+          }
+    
+          .project-page__card-content {
+            padding: 30px;
+            display: grid;
+            height: 100%;
+            // grid-auto-flow: row;
+            // grid-template-rows: 1fr auto;
+            background: #fff;
+            align-items: end;
+    
+            .project-page__card-title {
+              margin-bottom: 15px;
+            }
+    
+            .project-page__card-text {
+              margin-bottom: 55px;
+            }
+    
+            .project-page__card-price {
+              // margin-bottom: 70px;
+              font-family: Inter;
+              font-size: 20px;
+              font-weight: 400;
+              line-height: 24.2px;
+              text-align: left;
+              color: #000000;
+            }
+    
+            .project-page__card-footer {
+              padding-top: 15px;
+              border-top: 1px solid rgba(#000000, 0.1);
+              display: grid;
+              grid-auto-flow: row;
+              gap: 10px;
+    
+              .project-page__card-bot-wrap {
+                // margin-bottom: 10px;
+                display: grid;
+                grid-auto-flow: column;
+                justify-content: space-between;
+    
+                .project-page__card-key {
+                  font-family: Inter;
+                  font-size: 16px;
+                  font-weight: 400;
+                  line-height: 19.36px;
+                  text-align: left;
+                  color: #616161;
+                }
+    
+                .project-page__card-value {
+                  font-family: Inter;
+                  font-size: 16px;
+                  font-weight: 400;
+                  line-height: 19.36px;
+                  text-align: left;
+                  color: #363636;
+                }
+              }
+              .project-page__card-link {
+                margin-top: 10px;
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 19.36px;
+                text-align: left;
+                color: #748d55;
+                text-decoration: underline;
+              }
+            }
+          }
+        }
+      }
+    }    
   }
 }
 // --------------------------------------- company end ---------------------------------------
