--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1813,294 +1813,6 @@ a {
     visibility: visible;
   }
 
-  // .project-form {
-  //   position: absolute;
-  //   top: 50%;
-  //   right: 50%;
-  //   transform: translate(50%, -50%);
-  //   display: flex;
-  //   flex-flow: column nowrap;
-  //   max-width: 1180px;
-  //   min-height: 506px;
-  //   z-index: 1000;
-  //   opacity: 0;
-  //   // opacity: 1;
-  //   transition: all 0.8s ease 0s;
-  //   align-items: flex-start;
-  //   padding: 65px 150px;
-  //   gap: 10px;
-  //   background: #1f384f;
-  //   border-radius: 15px;
-
-  //   &__close {
-  //     // display: none;
-  //   }
-
-  //   &__close {
-  //     // position: absolute;
-  //     // top: 40px;
-  //     // right: 40px;
-  //     // color: var(--color-black);
-  //     // cursor: pointer;
-  //   }
-
-  //   &__title {
-  //     width: 100%;
-  //     font-size: 32px;
-  //     font-weight: 600;
-  //     line-height: 39.14px;
-  //     text-align: center;
-  //     color: white;
-  //     text-transform: uppercase;
-  //     margin-bottom: 5px;
-  //   }
-  //   &__subtitle {
-  //     width: 100%;
-  //     font-size: 16px;
-  //     font-weight: 400;
-  //     line-height: 19.57px;
-  //     text-align: center;
-  //     margin-bottom: 17px;
-  //     color: white;
-  //   }
-
-  //   &__inputs {
-  //     display: flex;
-  //     flex-flow: row nowrap;
-  //     gap: 20px;
-  //     margin-bottom: 8px;
-  //   }
-
-  //   &__input {
-  //     width: 280px;
-  //     height: 56px;
-  //     background-color: rgba(255, 255, 255, 0.1);
-  //     border-radius: 6px;
-  //     padding: 16px;
-  //     color: white;
-
-  //     &.project-form__input_textarea {
-  //       width: unset;
-  //       height: unset;
-  //       max-width: 880px;
-  //       min-height: 137px;
-  //       margin-bottom: 10px;
-  //     }
-
-  //     &:focus-visible {
-  //       outline: none;
-  //       border: none;
-  //       border-bottom: 1px solid var(--color-black);
-  //     }
-
-  //     &::placeholder {
-  //       font-size: 16px;
-  //       font-weight: 400;
-  //       line-height: 19.57px;
-  //       text-align: left;
-  //       color: rgba(white, 0.7);
-  //       // color: red;
-  //     }
-  //   }
-
-  //   &__label {
-  //     font-family: Montserrat;
-  //     font-size: 20px;
-  //     line-height: 110%;
-  //     display: flex;
-  //     flex-flow: column nowrap;
-  //     gap: 24px;
-  //   }
-
-  //   &__submit-wrap {
-  //     display: flex;
-  //     flex-flow: row nowrap;
-  //     gap: 20px;
-
-  //     .project-form__submit {
-  //       width: 280px;
-  //       height: 48px;
-  //       background-color: transparent;
-  //       border: 1px solid #ffffff;
-  //       border-radius: 6px;
-  //       color: white;
-  //       font-style: normal;
-  //       font-weight: 500;
-  //       font-size: 16px;
-  //       line-height: 20px;
-  //       transition: background-color 0.3s ease-in-out;
-  //       &:hover {
-  //         background-color: $color-2FA7BE;
-  //       }
-  //       &:active {
-  //         background-color: $color-268AB1;
-  //       }
-  //     }
-  //   }
-
-  //   &_popup {
-  //     // padding: 34px;
-  //     // gap: 10px;
-  //     // width: 437px;
-  //     // min-height: 470px;
-  //     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  //     // border-radius: 15px;
-  //     // background: white;
-  //     flex-direction: column;
-  //     align-items: flex-start;
-  //     padding: 50px;
-  //     gap: 20px;
-  //     max-width: 495px;
-  //     min-height: 827px;
-
-  //     background: #FFFFFF;
-  //     border-radius: 10px;
-
-  //     @media (max-width: 600px) {
-  //       width: 300px;
-  //     }
-
-  //     .project-form__close {
-  //       position: absolute;
-  //       top: -53px;
-  //       right: 0;
-  //       // color: $color-555A5E;
-  //       // cursor: pointer;
-  //     }
-
-  //     .project-form__title {
-  //       color: $color-555A5E;
-  //       margin-bottom: 0;
-  //     }
-
-  //     .project-form__subtitle {
-  //       color: $color-828282;
-  //       margin-bottom: 11px;
-  //     }
-
-  //     .project-form__inputs {
-  //       display: flex;
-  //       flex-flow: column nowrap;
-  //       gap: 8px;
-  //       // margin-bottom: 8px;
-  //     }
-
-  //     .project-form__submit {
-  //       width: 369px;
-  //       height: 48px;
-  //       // border: 1px solid #2DA1B7;
-  //       // color: $color-2DA1B7;
-  //       border-radius: 6px;
-
-  //       @media (max-width: 600px) {
-  //         width: 100%;
-  //       }
-  //     }
-
-  //     .checkbox {
-  //       position: relative;
-  //       display: block;
-  //       padding-left: 36px;
-  //       cursor: pointer;
-  //       font-style: normal;
-  //       font-weight: 400;
-  //       font-size: 14px;
-  //       line-height: 17px;
-  //       color: $color-828282;
-
-  //       &__link {
-  //         color: $color-828282;
-  //         transition: color 0.3s ease-in-out;
-
-  //         &:hover {
-  //           color: $color-34343B;
-  //           text-decoration: underline;
-  //         }
-  //       }
-
-  //       &__input {
-  //         display: none;
-
-  //         & + span {
-  //           position: absolute;
-  //           top: -2px;
-  //           left: 0;
-  //           text-align: center;
-  //           // width: 23px;
-  //           // height: 23px;
-  //           // border: 1px solid #ffffff;
-  //           // border-radius: 2px;
-  //           transition: all 0.3s ease-in-out;
-  //           width: 17px;
-  //           height: 17px;
-  //           border: 1px solid #828282;
-  //           border-radius: 2px;
-
-  //           &::before {
-  //             content: "";
-  //             width: 15px;
-  //             height: 15px;
-  //             position: absolute;
-  //             top: 50%;
-  //             left: 50%;
-  //             transform: translate(-50%, -50%);
-
-  //             background-image: url(@img/check-mark.svg);
-  //             background-repeat: no-repeat;
-  //             background-size: contain;
-  //             background-position: center;
-  //             opacity: 0;
-  //             transition: all 0.3s ease-in-out;
-  //           }
-  //         }
-
-  //         &:checked + span::before {
-  //           opacity: 1;
-  //         }
-  //       }
-  //     }
-
-  //     .project-form__input {
-  //       padding: 10px 10px 10px 20px;
-  //       width: 100%;
-  //       max-width: 100%;
-  //       height: 40px;
-  //       border: 1px solid #bababa;
-  //       border-radius: 6px;
-  //       font-size: 16px;
-  //       font-weight: 400;
-  //       line-height: 19.57px;
-  //       text-align: left;
-  //       color: rgba(#000000, 0.8);
-
-  //       &.project-form__input_textarea {
-  //         padding: 10px 10px 10px 20px;
-  //         max-width: 100%;
-  //         min-height: 107px;
-  //         border: 1px solid #bababa;
-  //         border-radius: 6px;
-  //         margin-bottom: 0;
-  //       }
-
-  //       &:focus-visible {
-  //         // outline: none;
-  //         // border: none;
-  //         border: 1px solid $color-2073A8;
-  //       }
-
-  //       &::placeholder {
-  //         color: rgba(#000000, 0.5);
-  //         // color: red;
-  //       }
-
-  //       &_error {
-  //         background: #fae7e7;
-  //         border: 1px solid #bababa;
-  //       }
-  //     }
-  //   }
-  // }
-
   .form {
     width: 100%;
     height: 100%;
@@ -2645,9 +2357,136 @@ a {
       color: #ffffff;
     }
   }
+
   .popup__content {
     // background-color: white;
   }
+
+  .promo {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    display: grid;
+    grid-auto-flow: row;
+    gap: 20px;
+    justify-content: start;
+    z-index: 1000;
+    // opacity: 0;
+    opacity: 1;
+    transition: all 0.8s ease 0s;
+    background: #ffffff;
+    border-radius: 10px;
+    max-width: 1000px;
+    min-height: 1230px;
+    padding: 60px;
+
+    .promo__title {
+      font-family: Inter;
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 18.15px;
+      text-align: left;
+      color: #000;
+    }
+
+    .promo__top-wrap {
+      margin-bottom: 20px;
+      display: grid;
+      grid-auto-flow: column;
+      gap: 20px;
+      justify-content: start;
+      
+      .promo__date {
+        font-family: Inter;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 18.15px;
+        text-align: left;
+        color: #000;
+      }
+      .promo__time {
+        font-family: Inter;
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 18.15px;
+        text-align: left;
+        color: #748D55;
+      }
+    }
+    .promo__img {
+      width: 100%;
+      height: 378px;
+      margin-bottom: 20px;
+
+      & img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+    .promo__list {
+      margin-bottom: 40px;
+
+      .promo__item {
+        .promo__item-title {
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 600;
+          line-height: 21.6px;
+          text-align: left;
+          color: #363636;
+        }
+
+        .promo__item-text {
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 21.6px;
+          text-align: left;
+          color: #363636;
+        }
+      }
+    }
+
+    .promo__desc {
+      font-family: Inter;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 21.6px;
+      text-align: left;
+      color: #363636;
+    }
+
+    .promo__phone {
+      font-family: Inter;
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 21.6px;
+      text-align: left;      
+      color: #363636;
+    }
+
+    .promo__btn {
+      display: grid;
+      place-items: center;
+      padding: 9px 10px;
+      max-width: 271px;
+      min-height: 60px;
+      background: #333333;
+      border-radius: 5px;
+    }
+
+    .promo__close {
+      position: absolute;
+      top: 35px;
+      right: 55px;
+      padding: 5px;
+    }
+  }
+
 }
 
 .burger {
@@ -4152,6 +3991,7 @@ a {
     .building {
       background: #f5f5f5;
       position: relative;
+      overflow: hidden;
 
       .building__container-top {
         padding: 85px 0 15px;
@@ -4638,6 +4478,7 @@ a {
     }
 
     .regions {
+      overflow: hidden;
       position: relative;
       // min-width: 1920px;
       .regions__container {
@@ -4928,6 +4769,8 @@ a {
             color: #ffffff;
           }
           .regions-banner__button {
+            display: grid;
+            place-items: center;
             padding: 9px;
             max-width: 286px;
             width: 100%;
@@ -5567,6 +5410,7 @@ a {
     }
 
     .news {
+      overflow: hidden;
       position: relative;
       // min-width: 1920px;
 
@@ -10191,6 +10035,7 @@ a {
       }
 
       .regions {
+        overflow: hidden;
         // min-width: 1920px;
         .regions__container {
           padding: 13px 0 40px;
