--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2367,31 +2367,30 @@ a {
     top: 50%;
     right: 50%;
     transform: translate(50%, -50%);
-    display: grid;
-    grid-auto-flow: row;
-    gap: 20px;
-    justify-content: start;
     z-index: 1000;
-    // opacity: 0;
-    opacity: 1;
     transition: all 0.8s ease 0s;
     background: #ffffff;
     border-radius: 10px;
-    max-width: 1000px;
-    min-height: 1230px;
-    padding: 60px;
+    width: 1000px;
+    height: 750px;
+    padding: 80px 43px 60px 60px;
+
+    display: grid;
+    grid-auto-flow: row;
+    grid-template: auto auto 1fr/ 1fr;
 
     .promo__title {
+      margin-bottom: 20px;
       font-family: Inter;
-      font-size: 15px;
-      font-weight: 500;
-      line-height: 18.15px;
+      font-size: 40px;
+      font-weight: 400;
+      line-height: 56px;
       text-align: left;
       color: #000;
     }
 
     .promo__top-wrap {
-      margin-bottom: 20px;
+      margin-bottom: 40px;
       display: grid;
       grid-auto-flow: column;
       gap: 20px;
@@ -2414,75 +2413,109 @@ a {
         color: #748D55;
       }
     }
-    .promo__img {
+    
+    .promo__wrapper {
       width: 100%;
-      height: 378px;
-      margin-bottom: 20px;
-
-      & img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-      }
-    }
-    .promo__list {
-      margin-bottom: 40px;
-
-      .promo__item {
-        .promo__item-title {
-          font-family: Inter;
-          font-size: 16px;
-          font-weight: 600;
-          line-height: 21.6px;
-          text-align: left;
-          color: #363636;
-        }
-
-        .promo__item-text {
-          font-family: Inter;
-          font-size: 16px;
-          font-weight: 400;
-          line-height: 21.6px;
-          text-align: left;
-          color: #363636;
-        }
-      }
-    }
-
-    .promo__desc {
-      font-family: Inter;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 21.6px;
-      text-align: left;
-      color: #363636;
-    }
-
-    .promo__phone {
-      font-family: Inter;
-      font-size: 16px;
-      font-weight: 600;
-      line-height: 21.6px;
-      text-align: left;      
-      color: #363636;
-    }
-
-    .promo__btn {
+      // height: 100%;
+      overflow: auto;
       display: grid;
-      place-items: center;
-      padding: 9px 10px;
-      max-width: 271px;
-      min-height: 60px;
-      background: #333333;
-      border-radius: 5px;
+      grid-auto-flow: row;
+      gap: 20px;
+      justify-content: start;
+      padding-right: 13px;
+
+      &::-webkit-scrollbar {
+        width: 4px;
+      }
+
+      &::-webkit-scrollbar-track {
+        width: 4px;
+        background-color: #dedede;
+        border-radius: 100px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        width: 4px;
+        border-radius: 100px;
+        background: #b1b1b1;
+      }
+
+      .promo__img {
+        width: 100%;
+        height: 350px;
+        margin-bottom: 20px;
+  
+        & img {
+          border-radius: 5px;
+          display: block;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+      .promo__list {
+        margin-bottom: 40px;
+        display: grid;
+        gap: 40px;
+  
+        .promo__item {
+          display: grid;
+          gap: 15px;
+          .promo__item-title {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 21.6px;
+            text-align: left;
+            color: #363636;
+          }
+  
+          .promo__item-text {
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 21.6px;
+            text-align: left;
+            color: #363636;
+          }
+        }
+      }
+  
+      .promo__desc {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 21.6px;
+        text-align: left;
+        color: #363636;
+      }
+  
+      .promo__phone {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 21.6px;
+        text-align: left;      
+        color: #363636;
+      }
+  
+      .promo__btn {
+        display: grid;
+        place-items: center;
+        padding: 9px 10px;
+        max-width: 271px;
+        min-height: 60px;
+        background: #333333;
+        border-radius: 5px;
+      }
     }
+
 
     .promo__close {
       position: absolute;
       top: 35px;
-      right: 55px;
+      right: 40px;
       padding: 5px;
     }
   }
