--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -383,11 +383,11 @@ a {
       box-shadow: none;
     }
     &:active {
-      color: white;
-      background-color: #455432;
-      border-color: #455432;
-      outline: none;
-      box-shadow: none;
+      // color: white;
+      // background-color: #455432;
+      // border-color: #455432;
+      // outline: none;
+      // box-shadow: none;
     }
   }
 
