--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6391,49 +6391,59 @@ a {
   min-height: 100vh;
 
   .not-found {
+    background: url(@img/404.png) center center / cover no-repeat;
+
     .not-found__container {
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
       justify-content: center;
       gap: 20px;
-      padding: 186px 10px 148px;
+      padding: 60px 10px 100px;
   
       .not-found__img {
-        margin-bottom: 20px;
-        & img {
-          mix-blend-mode: hard-light;
-        }
+        font-family: Inter;
+        font-size: 280px;
+        font-weight: 600;
+        line-height: 308px;
+        text-align: left;
+        color: #56693E;
+        letter-spacing: -10px;
       }
   
       .not-found__title {
+        //styleName: н2.2;
+        font-family: Inter;
         font-size: 40px;
         font-weight: 500;
-        line-height: 48.92px;
+        line-height: 48.41px;
         text-align: center;
-        color: #555A5E;
-        text-transform: uppercase;
+        color: #303030;
       }
   
       .not-found__text {
-        font-size: 22px;
+        margin-bottom: 20px;
+        max-width: 690px;
+        //styleName: текст боди;
+        font-family: Inter;
+        font-size: 16px;
         font-weight: 400;
-        line-height: 26.91px;
+        line-height: 23.2px;
         text-align: center;
-        color: #555A5E;
+        color: #5C5C5C;
       }
   
       .not-found__btns-wrapper {
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
+        display: grid;
+        grid-auto-flow: column;
         justify-content: center;
         gap: 20px;
       }
+
       .btn {
-        width: 174px;
-        border-radius: 6px;
-        // color: #000;
+        width: 237px;
+        border-radius: 5px;
+        color: #fff;
       }
     }
   }
